# RaiSerialization

./: .gitignore  BUILD_WITH_CLANG.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
cmake/: RaiSerializationConfig.cmake.in
memo/: RaiBinary(Fast).md  RaiBinary_MessagePack-like.md
memo/並列化重視・複雑/: RaiBinary(Simple)-Design.md  RaiBinary(Simple)-Requirements.md
src/Common/: SortedHashArrayMap.cppm  ThreadPool.cppm
src/IO/: EnumConverter.cppm  JsonBinding.cppm  JsonConcepts.cppm  JsonConverter.cppm  JsonField.cppm  JsonFieldExtras.cppm  JsonFieldSet.cppm  JsonIO.cppm  JsonParser.cppm  JsonPolymorphic.cppm  JsonTokenManager.cppm  JsonTokenizer.cppm  JsonValueIO.cppm  JsonWriter.cppm  ObjectSerializer.cppm  ParallelInputStreamSource.cppm  ReadingAheadBuffer.cppm  ReadingAheadDoubleBuffer.cppm  SortedFieldMap.cppm  SortedHashArrayMap.cppm
src/Serialization/: FieldSerializer.cppm  FormatIO.cppm  ObjectConverter.cppm  ObjectSerializer.cppm  ParallelInputStreamSource.cppm  Parser.cppm  PolymorphicConverter.cppm  ReadingAheadDoubleBuffer.cppm  TokenManager.cppm
src/Serialization/Json/: JsonIO.cppm  JsonParser.cppm  JsonTokenizer.cppm  JsonWriter.cppm
tests/: BasicJsonTest.cpp  CMakeLists.txt  JsonBenchmark.cpp  JsonEnumFieldTest.cpp  JsonTest.cpp  JsonTestHelper.cppm
